--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "buildCommand": "pnpm install --frozen-lockfile && pnpm build",
   "outputDirectory": "dist/public",
   "functions": {
-    "api/index.ts": {
-      "runtime": "nodejs20.x"
+    "api/**": {
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
